:bug: Fixed contrast

--- a/style.scss
+++ b/style.scss
@@ -1647,19 +1647,19 @@ header ul a:hover {
         .fieldset_concept {
             background: url("img/AUBRAC_CORNER_13.jpg") no-repeat center center;
             @media screen and (min-width: 729px) {
-                filter: contrast(50%);
+                filter: contrast(70%);
             }
         }
         .fieldset_history {
             background: url("img/Aubrac-Corner-histoire.jpeg") no-repeat center center;
             @media screen and (min-width: 729px) {
-                filter: contrast(50%);
+                filter: contrast(70%);
             }
         }
         .fieldset_menu {
             background: url("img/AUBRAC_CORNER_frontjpg.jpg") no-repeat center center;
             @media screen and (min-width: 729px) {
-                filter: contrast(50%);
+                filter: contrast(70%);
             }
         }
 
